# gambitho-tcg-trainer

./: .gitignore  README.md  ROADMAP.md  docker-compose.yml
backend/: pyproject.toml
backend/benchmark-results/: ab_rollout_guided_v1_smoke.json  ab_rollout_random_smoke.json  baseline_fase2_v1.json  baseline_fase2_v2_rollout.json  mirror_guided_v1_smoke.json  mirror_random_smoke.json  sensitivity_ismcts_iter_128.json  sensitivity_ismcts_iter_32.json  sensitivity_ismcts_iter_64.json  smoke_rollout_tuned_v3.json  smoke_rollout_tuned_v4_softmax.json  smoke_rollout_tuned_v5_rebalanced.json
backend/src/: __init__.py
backend/src/api/: main.py
backend/src/api/routes/: catalog.py  decks.py  ingestion.py  simulation.py
backend/src/domain/engine/: __init__.py  actions.py  fsm.py  the_bag.py
backend/src/domain/linter/: __init__.py  lorcana_linter.py
backend/src/domain/simulation/: __init__.py  benchmark.py  determinization.py  heuristic_bot.py  intent_profile.py  ismcts.py
backend/src/infra/db/: __init__.py
backend/src/infra/embeddings/: __init__.py  hash_embedding.py
backend/src/infra/ingestion/: __init__.py  (+5 more)
backend/tests/: test_catalog_api.py  test_deck_linter.py  test_decks_api.py  test_determinization.py  test_determinization_sampler.py  test_engine_transitions.py  test_hash_embedding.py  test_hybrid_ingest_api.py  test_ingestion_extract_cards.py  test_ingestor.py  test_intent_profile.py  test_ismcts_bot.py  test_lorcanajson_ingestor.py  test_lorcast_ingest_api.py  test_lorcast_normalize.py  test_simulation_api.py  test_simulation_benchmark.py
(+21 files in other folders)
